# cpuinfo

./: CMakeLists.txt  README  config.h.in  cpuinfo.c  cpuinfo.h  cycle.h  memory.c  memory.h  report.c  report.h  sleep.h  utils.h
arch/ppc-64/: cpuinfo.c  cpuinfo.h  cycle.h
arch/x86-64/: cache.c  cache.h  cpuid.h  cpuinfo.c  cpuinfo.h  cycle.h
cmake/: CMakeArch.cmake  CMakeBuildType.cmake  CMakeCompilerOpts.cmake  CMakeCompilerSuite.cmake  CMakeConfigH.cmake  CMakeEnableC99.cmake  CMakeOS.cmake  CMakeTau.cmake
